styles/globals.scss
/* ... */
#projects-container{
  min-height: 100vh;
  background-color: rgb(34, 34, 34);
  padding-top: calc(5vh + 10px);
  line-height: 1.5;

  &.main-container{
    &::before{
      background-image: url(../public/tile1.svg);
      background-repeat: repeat;
      background-size: 10vw;
    }
  }
  
  h1{
    color: map-get($colors-beige,100);
    font-family: 'Righteous', cursive;
    font-size: 3rem;
    margin-top: 50px;
    text-align: center;
    text-shadow: -4px 4px 0px rgba(150, 150, 150, 0.25);
    // letter-spacing: 10px;
  }
  
  .content-area{
    color: map-get($colors-beige,100);
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
  }
}

.project-card-list-container{
  width: 100%;
  display: flex;
  flex-direction: column;
}

.project-card-header-container{
  width: 100%;
  aspect-ratio: 16/8;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 5px;
  cursor: pointer;

  svg{
    background-color: rgba($color: #A3A3A3, $alpha: 0.8);
    box-shadow: -2px 2px 4px 2px rgba($color: #000000, $alpha: 0.75);
    border: 0px;
    padding: 5px;
    border-radius: 5px;
    position: absolute;
    width: 11vw;
    height: 11vw;
    aspect-ratio: 1/1;
    right: calc(2vw + 5px);
    margin-top: 30%;
  }

}

.project-card-image-container{
  object-fit: contain;
  position: relative;
  width: 95%;
  height: 95%;
  background-color: rgba($color: #5a5a5a, $alpha: 0.5);
  box-shadow: 4px 4px 10px 5px rgba($color: #000000, $alpha: 0.5);

  img{
    object-fit: cover;
  }
}

.project-card-main-container{
  width: 100vw;
  height: max-content;
  display: flex;
  flex-direction: column;

  h2{
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    text-align: center;
    font-size: 1.5rem;
  }
  p{
    margin: 0px;
    padding: 10px;
    font-size: 1rem;
  }
  a{
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    align-self: flex-end;
    width: fit-content;
    margin-right: 10px;
    margin-bottom: 30px;
    font-size: 1rem;
    text-decoration: none;

    &:hover{
      animation: scaleUp 40ms ease-in forwards;
    }
  }
}

#projects-page-container{
  height: 100%;
  background-image: linear-gradient(map-get($colors-beige,500), map-get($colors-gray,500) );
  padding-top: calc(5vh + 10px);
  line-height: 1.5;

  &.main-container{
    &::before{
      background-image: url(../public/tile1.svg);
      background-repeat: repeat;
      background-size: 10vw;
    }
  }

  .back-button{
    background: transparent;
    border: none;
    width: min-content;
    padding: 10px;
    margin-top: 20px;
  }

  .project-card-image-container{
    object-fit: contain;
    position: relative;
    width: 95%;
    height: 95%;
    background-color: rgba($color: #5a5a5a, $alpha: 0.5);
    box-shadow: 4px 4px 10px 5px rgba($color: #000000, $alpha: 0.5);
    img{
          object-fit: cover;
        }
  }

  color: white;
  font-family: 'Montserrat', sans-serif;

  h1{
    font-size: 1.5rem;
    text-align: center;
    font-weight: 600;
    margin-top: 10px;
    margin-bottom: 0px;
  }

  h2{
    font-size: 1.3rem;
    padding: 0px 10px 0px 10px;
    margin-top: 30px;
  }

  p{
    font-size: 1rem;
    padding: 0px 10px 0px 10px;
  }

  li{
    font-size: 1rem;
    padding: 0px 10px 0px 10px;
  }
}

.project-content-container{
    width: 100%;
    min-height: 100vh;
    height: fit-content;
    display: flex;
    flex-direction: column;

    &#milaor{
    background-color: #485D70CC;
    }

    &#simply-cookie{
    background-color: #885733CC;
    }
}

.github-link{
  font-size: 1rem;
  text-decoration: underline;
  width: max-content;
  align-self: center;
  cursor: pointer;
}

@keyframes scaleUp {
  0% {text-decoration: none;transform: scale(1);}
  100%{text-decoration:underline;transform: scale(1.05);}
}

#experiences-container{
  background-image: url(../public/Topography.svg);
  background-size: cover;
  padding-top: calc(5vh + 10px);
  padding-bottom: 40px;

  .content-area{
    width: 100%;
    min-height: 100vh;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  h1{
    color: map-get($colors-beige,100);
    font-family: 'Righteous', cursive;
    font-size: 3rem;
    margin-top: 50px;
    text-align: center;
    text-shadow: -4px 4px 0px rgba(150, 150, 150, 0.25);
    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
    background-color: rgba(0, 0, 0, 0.5);
    width: fit-content;
    padding: 5px;
  }
}

.experience-list-container{
  width: 100%;
  height: max-content;
  display: flex;
  flex-direction: column;
  gap: 20px;
  //background-color: aqua;
}

.experience-card-main-container{
  width: 100%;
  height: fit-content;
  display: flex;
  background-color: rgba(255, 255, 255, 0.8);
  gap: 10px;
  padding: 10px;

  .experience-card-image-container{
    min-width: 20vw;
    height: 100%;
    aspect-ratio: 1/1;
    position: relative;
    
    img{
      margin-top: 5px;
      object-fit: contain;
    }
  }

  .experience-card-text-container{
    width: 100%;
    margin-right: 20px;
  }
  
  h2{
    font-size: 1.1rem;
    font-weight: 700;
    margin: 0px;
    
  }

  .position-duration{
    font-size: 0.8rem;
    color: map-get($colors-beige, 400 );
  }

  span{
    font-size: 1rem;
    font-weight: 600;
    color: map-get($colors-gray, 500 );
  }
}


#contact-me-container{
  .content-area{
    //background-image: linear-gradient(#1313138f, rgba(59, 56, 1, 0.692));
    width: 100%;
    height: 100vh;
  }
}
/* ... */

